--- a/faq.html
+++ b/faq.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ Page</title>
-    <link rel="stylesheet" href="faq.css">
+    <link rel="stylesheet" href="/css/faq.css">
 </head>
 <body>
     <header>
-        <h1 class="logo"><a href="#">QuickMeals</a></h1>
+        <h1 class="logo">
+            <a href="index.html">
+                <img src="/IMG/logo.jpeg" alt="QuickMeals Logo" />
+            </a>
+        </h1><!-- burger menu -->
+        <input type="checkbox" id="menu-toggle"style="display:none;">
+        <label class="burger-menu" for="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="recipes.html">Recipes</a></li>
-                <li><a href="History.html">History </a></li>
+                <li><a href="History.html">History</a></li>
                 <li><a href="Tricks.html">Tricks</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="faq.html">FAQ</a></li>
@@ -21,40 +31,40 @@
         </nav>
     </header>
 
-    <section class="faq-container">
-        <h1>Frequently Asked Questions</h1>
+    <main>
+        <section class="faq-container">
+            <h1>Frequently Asked Questions</h1>
 
-        <details>
-            <summary> Can I really cook in under 20 minutes, or is that a myth like unicorns?</summary>
-            <p>Unicorns may be mythical, but 20-minute meals are real magic! With our recipes, your food will be ready before you can decide on a show to binge-watch.</p>
-        </details>
+            <details>
+                <summary>Can I really cook in under 20 minutes, or is that a myth like unicorns?</summary>
+                <p>Unicorns may be mythical, but 20-minute meals are real magic! With our recipes, your food will be ready before you can decide on a show to binge-watch.</p>
+            </details>
 
-        <details>
-            <summary>Is it normal to ‘taste test’... half the dish before serving?</summary>
-            <p>Absolutely! It’s called “quality control” and a chef’s privilege. Just be careful—you might find yourself needing to cook a second batch! A good rule of thumb: taste, but save enough for the actual meal. Your guests will thank you (and so will your waistline)!</p>
-        </details>
+            <details>
+                <summary>Is it normal to ‘taste test’... half the dish before serving?</summary>
+                <p>Absolutely! It’s called “quality control” and a chef’s privilege. Just be careful—you might find yourself needing to cook a second batch! A good rule of thumb: taste, but save enough for the actual meal. Your guests will thank you (and so will your waistline)!</p>
+            </details>
 
-        <details>
-            <summary>Can I add my recipe to your website?</summary>
-            <p> Yes, we’d love to see your recipes! Please submit your recipe through our submission form, and make sure to include clear instructions and ingredients. We’ll review it and may feature it on our site!.</p>
-        </details>
+            <details>
+                <summary>Can I add my recipe to your website?</summary>
+                <p>Yes, we’d love to see your recipes! Please submit your recipe through our submission form, and make sure to include clear instructions and ingredients. We’ll review it and may feature it on our site!</p>
+            </details>
 
-        <details>
-            <summary>Why does my food never look like the pictures?</summary>
-            <p> Don’t worry, you’re not alone! Food photographers have their tricks (and sometimes a little help from Photoshop). The important part is that it tastes amazing, even if it’s not quite Instagram-perfect!</p>
-        </details>
+            <details>
+                <summary>Why does my food never look like the pictures?</summary>
+                <p>Don’t worry, you’re not alone! Food photographers have their tricks (and sometimes a little help from Photoshop). The important part is that it tastes amazing, even if it’s not quite Instagram-perfect!</p>
+            </details>
 
-        <details>
-            <summary>How do I prevent my kitchen from looking like a disaster zone after cooking?</summary>
-            <p>Clean as you go! Keep a bowl for scraps and wash utensils and cutting boards while your dish is cooking. This way, you’ll spend less time cleaning up and more time enjoying your meal!</p>
-        </details>
+            <details>
+                <summary>How do I prevent my kitchen from looking like a disaster zone after cooking?</summary>
+                <p>Clean as you go! Keep a bowl for scraps and wash utensils and cutting boards while your dish is cooking. This way, you’ll spend less time cleaning up and more time enjoying your meal!</p>
+            </details>
 
-        <details>
-            <summary>What should I do if I burn my food?</summary>
-            <p>Don’t panic! If it’s just slightly burnt, you can often salvage it by scraping off the burnt parts or adding a sauce to mask the flavor. If it’s beyond saving, consider it a lesson learned and try again with a timer next time!</p>
-        </details>
-
-       
+            
+        </section>
+    </main>
+    <section class="cookies-message">
+        This website uses cookies to ensure you get the best experience on our website.
     </section>
 
     <footer>
@@ -64,8 +74,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="recipes.html">Recipes</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="History.html">History</a></li>
+                    <li><a href="Tricks.html">Tricks</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                 </ul>
@@ -98,7 +108,7 @@
             </article>
         </section>
 
-        <p>&copy; 2024 QuickMeals. All Rights Reserved.</p>
+        <p class="footer-copyright">&copy; 2024 QuickMeals. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
