--- a/recipes.html
+++ b/recipes.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes - QuickMeals</title>
-    <link rel="stylesheet" href="recipe.css">
+    <link rel="stylesheet" href="/css/recipe.css">
 </head>
 <body>
     <header>
-        <h1 class="logo"><a href="#">QuickMeals</a></h1>
+        <h1 class="logo">
+            <a href="index.html">
+                <img src="/IMG/logo.jpeg" alt="QuickMeals Logo" title="QuickMeals Logo" />
+            </a>
+        </h1><!-- burger menu -->
+        <input type="checkbox" id="menu-toggle" style="display:none;">
+        <label class="burger-menu" for="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -21,144 +31,122 @@
         </nav>
     </header>
 
-    <main>
-        <div class="recipe-container">
-            <!-- Chicken Category -->
-            <section id="chicken" class="recipe-section">
-                <h2>Chicken Recipes</h2>
-                <div class="recipe-grid">
-                    <article class="recipe-card">
-                        <h3>Grilled Chicken</h3>
-                        <p>Juicy and flavorful grilled chicken with herbs.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Chicken Stir Fry</h3>
-                        <p>Quick and healthy stir-fry with colorful veggies.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Chicken Alfredo</h3>
-                        <p>Creamy pasta with tender chicken and Parmesan cheese.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Chicken Curry</h3>
-                        <p>Aromatic curry with a blend of spices and tender chicken.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Baked Chicken</h3>
-                        <p>Oven-baked chicken with a crispy skin and juicy inside.</p>
-                    </article>
-                </div>
+    <main><!-- RecipeSection with Image and Text -->
+        <article class="category">
+            <h3>Chicken Recipes</h3>
+            <p>Quick and delicious chicken recipes for every meal.</p>
+            <section class="recipe-container">
+                <section class="recipe-item">
+                    <h4>Chicken Shawarma</h4>
+                    <figure class="recipe-card">
+                        <img src="/IMG/image3.jpg" alt="Chicken Shawarma" title="Delicious Chicken Shawarma" />
+                        <figcaption>A mouth-watering chicken shawarma recipe.</figcaption>
+                    </figure>
+                </section>
+                <section class="recipe-item">
+                    <h4>Glazed Honey Chicken</h4>
+                    <figure class="recipe-card">
+                        <img src="/IMG/image4.jpg" alt="Glazed Honey Chicken" title="Sweet Glazed Honey Chicken" />
+                        <figcaption>A quick and sweet glazed honey chicken recipe.</figcaption>
+                    </figure>
+                </section>
+                <section class="recipe-item">
+                    <h4>Chicken Kebab</h4>
+                    <figure class="recipe-card">
+                        <img src="/IMG/image2.jpg" alt="Chicken Kebab" title="Grilled Chicken Kebab" />
+                        <figcaption>Delicious grilled chicken kebabs.</figcaption>
+                    </figure>
+                </section>
             </section>
+        </article>
 
-            <!-- Smoothies Category -->
-            <section id="smoothies" class="recipe-section">
-                <h2>Smoothies Recipes</h2>
-                <div class="recipe-grid">
-                    <article class="recipe-card">
-                        <h3>Berry Blast Smoothie</h3>
-                        <p>A refreshing mix of berries and yogurt.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Green Detox Smoothie</h3>
-                        <p>Healthy smoothie with spinach, kale, and green apples.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Mango Tango Smoothie</h3>
-                        <p>Tropical blend of mango and pineapple with coconut milk.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Banana Peanut Butter Smoothie</h3>
-                        <p>Rich smoothie with banana, peanut butter, and oats.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Chocolate Protein Smoothie</h3>
-                        <p>High-protein smoothie with chocolate and banana.</p>
-                    </article>
-                </div>
+        <article class="category">
+            <h3>Smoothies</h3>
+            <p>Quick and delicious smoothie recipes to fuel your day.</p>
+            <section class="recipe-container">
+                <section class="recipe-item">
+                    <h4>Mango Pineapple Smoothie</h4>
+                    <figure class="recipe-card">
+                        <img src="/IMG/image9.jpg" alt="Mango Pineapple Smoothie" title="Refreshing Mango Pineapple Smoothie" />
+                        <figcaption>A refreshing mango pineapple smoothie.</figcaption>
+                    </figure>
+                </section>
+                <section class="recipe-item">
+                    <h4>Strawberry Berry Smoothie</h4>
+                    <figure class="recipe-card">
+                        <img src="/IMG/image1.jpg" alt="Strawberry Berry Smoothie" title="Berry Blast Smoothie" />
+                        <figcaption>A berry blast smoothie with strawberries.</figcaption>
+                    </figure>
+                </section>
+                <section class="recipe-item">
+                    <h4>Banana Oats Smoothie</h4>
+                    <figure class="recipe-card">
+                        <img src="/IMG/image5.jpeg" alt="Banana Oats Smoothie" title="Nutritious Banana Oats Smoothie" />
+                        <figcaption>A nutritious banana oats smoothie.</figcaption>
+                    </figure>
+                </section>
             </section>
+        </article>
 
-            <!-- Veggie Category -->
-            <section id="veggie" class="recipe-section">
-                <h2>Veggie Recipes</h2>
-                <div class="recipe-grid">
-                    <article class="recipe-card">
-                        <h3>Vegetable Stir Fry</h3>
-                        <p>Quick and healthy stir-fried vegetables with tofu.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Veggie Burger</h3>
-                        <p>Homemade veggie burger with beans and spices.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Grilled Veggie Skewers</h3>
-                        <p>Grilled vegetable skewers with a balsamic glaze.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Roasted Vegetables</h3>
-                        <p>Oven-roasted vegetables with herbs and olive oil.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Veggie Lasagna</h3>
-                        <p>Layered lasagna with vegetables and cheese.</p>
-                    </article>
-                </div>
+        <article class="category">
+            <h3>Veggie Recipes</h3>
+            <p>Quick and healthy veggie recipes for everyone.</p>
+            <section class="recipe-container">
+                <section class="recipe-item">
+                    <h4>ChickPea Salad</h4>
+                    <figure class="recipe-card">
+                        <img src="/IMG/image6.jpeg" alt="Chickpea Salad" title="Healthy Chickpea Salad" />
+                        <figcaption>A healthy and tasty chickpea salad.</figcaption>
+                    </figure>
+                </section>
+                <section class="recipe-item">
+                    <h4>Avocado Salad</h4>
+                    <figure class="recipe-card">
+                        <img src="/IMG/image8.jpg" alt="Avocado Salad" title="Creamy Avocado Salad" />
+                        <figcaption>A creamy and delicious avocado salad.</figcaption>
+                    </figure>
+                </section>
+                <section class="recipe-item">
+                    <h4>Garlic Stir-Fry</h4>
+                    <figure class="recipe-card">
+                        <img src="/IMG/image7.jpeg" alt="Garlic Stir-Fry" title="Flavorful Garlic Stir-Fry" />
+                        <figcaption>A flavorful garlic stir-fry dish.</figcaption>
+                    </figure>
+                </section>
             </section>
+        </article>
 
-            <!-- Italian Category -->
-            <section id="italian" class="recipe-section">
-                <h2>Italian Recipes</h2>
-                <div class="recipe-grid">
-                    <article class="recipe-card">
-                        <h3>Spaghetti Bolognese</h3>
-                        <p>Classic Italian pasta with rich meat sauce.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Margherita Pizza</h3>
-                        <p>Simple and delicious pizza with tomato, basil, and mozzarella.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Risotto</h3>
-                        <p>Creamy risotto with Parmesan and white wine.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Lasagna</h3>
-                        <p>Layered pasta with rich meat sauce and cheese.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Penne Arrabbiata</h3>
-                        <p>Spicy tomato pasta with garlic and red chili flakes.</p>
-                    </article>
-                </div>
+        <article class="category">
+            <h3>Italian Recipes</h3>
+            <p>Delicious Italian recipes for your cooking adventures.</p>
+            <section class="recipe-container">
+                <section class="recipe-item">
+                    <h4>Spaghetti Bolognese</h4>
+                    <figure class="recipe-card">
+                        <img src="/IMG/image10.jpg" alt="Spaghetti Bolognese" title="Classic Spaghetti Bolognese" />
+                        <figcaption>A classic spaghetti bolognese recipe.</figcaption>
+                    </figure>
+                </section>
+                <section class="recipe-item">
+                    <h4>Margherita Pizza</h4>
+                    <figure class="recipe-card">
+                        <img src="/IMG/image11.jpg" alt="Margherita Pizza" title="Traditional Margherita Pizza" />
+                        <figcaption>A traditional margherita pizza recipe.</figcaption>
+                    </figure>
+                </section>
+                <section class="recipe-item">
+                    <h4>Pasta Carbonara</h4>
+                    <figure class="recipe-card">
+                        <img src="/IMG/image12.jpg" alt="Pasta Carbonara" title="Creamy Pasta Carbonara" />
+                        <figcaption>A creamy pasta carbonara recipe.</figcaption>
+                    </figure>
+                </section>
             </section>
-
-            <!-- Rice Category -->
-            <section id="rice" class="recipe-section">
-                <h2>Rice Recipes</h2>
-                <div class="recipe-grid">
-                    <article class="recipe-card">
-                        <h3>Fried Rice</h3>
-                        <p>Quick and easy fried rice with veggies and eggs.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Rice Pilaf</h3>
-                        <p>Flavored rice with herbs, spices, and broth.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Paella</h3>
-                        <p>Spanish rice dish with seafood, chicken, and saffron.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Coconut Rice</h3>
-                        <p>Fragrant rice cooked with coconut milk.</p>
-                    </article>
-                    <article class="recipe-card">
-                        <h3>Jollof Rice</h3>
-                        <p>West African rice dish with tomatoes and spices.</p>
-                    </article>
-                </div>
-            </section>
-        </div>
+        </article>
     </main>
+    <section class="cookies-message">
+        This website uses cookies to ensure you get the best experience on our website.
+    </section>
 
     <footer>
         <section class="footer-grid">
@@ -177,10 +165,9 @@
             <article>
                 <h4>Popular Categories</h4>
                 <ul>
-                    <li><a href="#">Chicken</a></li>
-                    <li><a href="#">Smoothie</a></li>
-                    <li><a href="#">Veggies</a></li>
-                   
+                    <li><a href="recipes.html">Chicken</a></li>
+                    <li><a href="recipes.html">Smoothie</a></li>
+                    <li><a href="recipes.html">Veggies</a></li>
                 </ul>
             </article>
 
@@ -204,6 +191,5 @@
 
         <p>&copy; 2024 QuickMeals. All Rights Reserved.</p>
     </footer>
-
 </body>
 </html>
