This is my Website!

--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
                 <h4>Recipes</h4> 
                 <section class="recipe-item">
                     <h5>Mango Pineapple Smoothie</h5>
-                    <figure class="recipe-card" style="background-image: url('/IMG/image9.jpg');"></figure>
+                    <figure class="recipe-card" style="background-image: url('./IMG/image9.jpg');"></figure>
                 </section>
                 <section class="recipe-item">
                     <h5>Strawberry Berry Smoothie</h5>
-                    <figure class="recipe-card" style="background-image: url('/IMG/image1.jpg');"></figure>
+                    <figure class="recipe-card" style="background-image: url('./IMG/image1.jpg');"></figure>
                 </section>
                 <section class="recipe-item">
                     <h5>Banana Oats Smoothie</h5>
-                    <figure class="recipe-card" style="background-image: url('/IMG/image5.jpeg');"></figure>
+                    <figure class="recipe-card" style="background-image: url('./IMG/image5.jpeg');"></figure>
                 </section>
             </section>
         </article>
